--- a/ClientApp/app/components/home/home.component.html
+++ b/ClientApp/app/components/home/home.component.html
@@ -1,3 +1,3 @@
-<h1>Crew members <a class="btn btn-default btn-sm pull-right" [routerLink]="['/add-strawhat']">Add</a></h1>
+<h1>Crew <a class="btn btn-default btn-sm pull-right" [routerLink]="['/add-strawhat']">Add</a></h1>
 
 <strawhats-list></strawhats-list>
