--- a/ClientApp/app/components/strawhats-crew/strawhats-list/strawhats-list.component.html
+++ b/ClientApp/app/components/strawhats-crew/strawhats-list/strawhats-list.component.html
@@ -1,13 +1,14 @@
+
 <span *ngIf="!strawHats">Loading...</span>
+<span *ngIf="strawHats && strawHats.length == 0;">No data.</span>
 
 <div class="panel col-lg-4 col-md-6 col-sm-12" *ngFor='let strawhat of strawHats'>
-    
         <header class="panel-header">
             <span class="title">{{strawhat.name}}</span>
             <span class="sub-title">{{strawhat.nickName}}</span>
             <div class="btn-group pull-right">
-                <a class="btn btn-primary btn-sm" title="Edit" [routerLink]="['/edit-strawhat']"><i class="glyphicon glyphicon-pencil"></i></a>
-                <a class="btn btn-danger btn-sm" title="Delete" [routerLink]="['/delete-strawhat']"><i class="glyphicon glyphicon-trash"></i></a>
+                <a class="btn btn-primary btn-sm" title="Edit" [routerLink]="['/edit-strawhat/' + strawhat.id]"><i class="glyphicon glyphicon-pencil"></i></a>
+                <a class="btn btn-danger btn-sm" title="Delete" (click)=delete(strawhat.id)><i class="glyphicon glyphicon-trash"></i></a>
             </div>            
         </header>
         <section class="content panel-body">
@@ -16,29 +17,4 @@
         <footer class="footer">
             <span>Current bounty is worth ${{strawhat.bounty | number}}</span>
         </footer>
-        
-    
-</div>
-
-
-<span *ngIf="!strawHatsOb">Loading...</span>
-
-<div class="panel col-lg-4 col-md-6 col-sm-12" *ngFor='let strawhat of strawHatsOb'>
-    
-        <header class="panel-header">
-            <span class="title">{{strawhat.name}}</span>
-            <span class="sub-title">{{strawhat.nickName}}</span>
-            <div class="btn-group pull-right">
-                <a class="btn btn-primary btn-sm" title="Edit" [routerLink]="['/edit-strawhat']"><i class="glyphicon glyphicon-pencil"></i></a>
-                <a class="btn btn-danger btn-sm" title="Delete" [routerLink]="['/delete-strawhat']"><i class="glyphicon glyphicon-trash"></i></a>
-            </div>            
-        </header>
-        <section class="content panel-body">
-            <span>{{strawhat.position}} of the {{strawhat.crewName}}</span>
-        </section>
-        <footer class="footer">
-            <span>Current bounty is worth ${{strawhat.bounty | number}}</span>
-        </footer>
-        
-    
 </div>
